# mark

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/mark/: buffer.rs  editor.rs  lib.rs  mark.rs  view.rs
src/mark/iterators/: lines.rs
test/: doc.md  example.md  long.md
